--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:18februari@localhost:5432/dbkuesioner?schema=public"
+DATABASE_URL="postgresql://postgres:uUjg2skmSk63x1cA@db.zcjoedduleovajnedgqd.supabase.co:5432/postgres"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="adadsa"
